--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,30 +1,35 @@
 {
-"name": "Java 17 and maven 3.9.9 DevContainer to build Java Azure Functions Text Completion with Azure AI",
-"image": "mcr.microsoft.com/devcontainers/java:1-17-bookworm",
-"features": {
-        //Az CLI install
-        "ghcr.io/devcontainers/features/azure-cli:latest": {},
-        //Azure Function Core tools + Visual Studio Code Extension install
-        "ghcr.io/jlaundry/devcontainer-features/azure-functions-core-tools:1": {},
-        // azd
-        "ghcr.io/azure/azure-dev/azd:latest": {},
-        // Java and Maven
-        "ghcr.io/devcontainers/features/java:1": {
-            "version": "none",
-            "installMaven": true,
-            "mavenVersion": "3.9.9"
-        },
-    "ghcr.io/devcontainers/features/git:1": {}
-},
-"customizations": {
+  "name": "Functions Quickstarts Codespace",
+  "dockerFile": "Dockerfile",
+  "features": {
+    "azure-cli": "latest"
+  },
+  "customizations": {
     "vscode": {
-        "extensions": [
-            "GitHub.vscode-github-actions",
-            "ms-azuretools.azure-dev",
-            "ms-azuretools.vscode-bicep",
-            "vscjava.vscode-java-pack",
-            "amodio.tsl-problem-matcher"
-        ]
+      "extensions": [
+        "ms-azuretools.vscode-bicep",
+        "ms-azuretools.vscode-docker",
+        "ms-azuretools.vscode-azurefunctions",
+        "GitHub.copilot",
+        "humao.rest-client"
+      ]
     }
-}
+  },
+  "mounts": [
+    // Mount docker-in-docker library volume
+    "source=codespaces-linux-var-lib-docker,target=/var/lib/docker,type=volume"
+  ],
+  // Always run image-defined docker-init.sh to enable docker-in-docker
+  "overrideCommand": false,
+  "remoteUser": "codespace",
+  "runArgs": [
+    // Enable ptrace-based debugging for Go in container
+    "--cap-add=SYS_PTRACE",
+    "--security-opt",
+    "seccomp=unconfined",
+
+    // Enable docker-in-docker configuration
+    "--init",
+    "--privileged"
+  ]
 }
