--- a/.github/workflows/template-validation-win.yaml
+++ b/.github/workflows/template-validation-win.yaml
@@ -9,12 +9,12 @@ permissions:
 
 jobs:
   template_validation_job:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     name: template validation
     steps:
       - uses: actions/checkout@v4
 
-      - uses: microsoft/template-validation-action@v0.3.3
+      - uses: microsoft/template-validation-action@Latest
         id: validation
         with: 
           useDevContainer: false
