Fixing create role for user

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -42,12 +42,13 @@ jobs:
         shell: pwsh
 
       - name: Provision Infrastructure
-        run:  azd provision --no-prompt
+        run: |
+          azd env set CREATE_ROLE_FOR_USER false --no-prompt
+          azd provision --no-prompt
         env:
           AZURE_ENV_NAME: ${{ vars.AZURE_ENV_NAME }}
           AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
           AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-          CREATE_ROLE_FOR_USER: false
 
       - name: Deploy Application
         run: azd deploy --no-prompt
