--- a/.github/workflows/template-validation-win.yaml
+++ b/.github/workflows/template-validation-win.yaml
@@ -14,6 +14,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Java version
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+          cache: 'maven'
+
       - uses: microsoft/template-validation-action@Latest
         id: validation
         with: 
