--- a/.github/workflows/template-validation-win.yaml
+++ b/.github/workflows/template-validation-win.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v2
         with:
-          distribution: 'zulu'
+          distribution: 'microsoft'
           java-version: '17'
           cache: 'maven'
 
