--- a/.github/workflows/template-validation.yaml
+++ b/.github/workflows/template-validation.yaml
@@ -16,6 +16,8 @@ jobs:
 
       - uses: microsoft/template-validation-action@Latest
         id: validation
+        with:
+          useDevContainer: false
         env:
           AZURE_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
           AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
